--- a/ipynbs/11_simpleLinearModels.ipynb
+++ b/ipynbs/11_simpleLinearModels.ipynb
@@ -28,7 +28,16 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Programs\\WPy64-39100\\python-3.9.10.amd64\\lib\\site-packages\\statsmodels\\compat\\pandas.py:65: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import Int64Index as NumericIndex\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
@@ -104,8 +113,8 @@
       "Dep. Variable:                   time   R-squared:                       0.287\n",
       "Model:                            OLS   Adj. R-squared:                  0.275\n",
       "Method:                 Least Squares   F-statistic:                     24.13\n",
-      "Date:                Tue, 14 Apr 2020   Prob (F-statistic):           7.28e-06\n",
-      "Time:                        22:11:31   Log-Likelihood:                -219.23\n",
+      "Date:                Wed, 23 Nov 2022   Prob (F-statistic):           7.28e-06\n",
+      "Time:                        13:33:43   Log-Likelihood:                -219.23\n",
       "No. Observations:                  62   AIC:                             442.5\n",
       "Df Residuals:                      60   BIC:                             446.7\n",
       "Df Model:                           1                                         \n",
@@ -122,7 +131,7 @@
       "Kurtosis:                       4.649   Cond. No.                         2.62\n",
       "==============================================================================\n",
       "\n",
-      "Warnings:\n",
+      "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
      ]
     }
@@ -193,8 +202,8 @@
       "Dep. Variable:                   time   R-squared:                       0.844\n",
       "Model:                            OLS   Adj. R-squared:                  0.839\n",
       "Method:                 Least Squares   F-statistic:                     159.6\n",
-      "Date:                Tue, 14 Apr 2020   Prob (F-statistic):           1.58e-24\n",
-      "Time:                        22:11:31   Log-Likelihood:                -172.12\n",
+      "Date:                Wed, 23 Nov 2022   Prob (F-statistic):           1.58e-24\n",
+      "Time:                        13:33:43   Log-Likelihood:                -172.12\n",
       "No. Observations:                  62   AIC:                             350.2\n",
       "Df Residuals:                      59   BIC:                             356.6\n",
       "Df Model:                           2                                         \n",
@@ -212,7 +221,7 @@
       "Kurtosis:                      11.362   Cond. No.                     1.30e+05\n",
       "==============================================================================\n",
       "\n",
-      "Warnings:\n",
+      "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
       "[2] The condition number is large, 1.3e+05. This might indicate that there are\n",
       "strong multicollinearity or other numerical problems.\n"
@@ -274,8 +283,8 @@
       "Dep. Variable:                   time   R-squared:                       0.893\n",
       "Model:                            OLS   Adj. R-squared:                  0.888\n",
       "Method:                 Least Squares   F-statistic:                     162.1\n",
-      "Date:                Tue, 14 Apr 2020   Prob (F-statistic):           3.67e-28\n",
-      "Time:                        22:11:31   Log-Likelihood:                -160.30\n",
+      "Date:                Wed, 23 Nov 2022   Prob (F-statistic):           3.67e-28\n",
+      "Time:                        13:33:43   Log-Likelihood:                -160.30\n",
       "No. Observations:                  62   AIC:                             328.6\n",
       "Df Residuals:                      58   BIC:                             337.1\n",
       "Df Model:                           3                                         \n",
@@ -294,7 +303,7 @@
       "Kurtosis:                      11.619   Cond. No.                     3.40e+05\n",
       "==============================================================================\n",
       "\n",
-      "Warnings:\n",
+      "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
       "[2] The condition number is large, 3.4e+05. This might indicate that there are\n",
       "strong multicollinearity or other numerical problems.\n"
@@ -370,27 +379,27 @@
       "==============================================================================\n",
       "Dep. Variable:                      y   R-squared:                       0.994\n",
       "Model:                            OLS   Adj. R-squared:                  0.994\n",
-      "Method:                 Least Squares   F-statistic:                     8320.\n",
-      "Date:                Tue, 14 Apr 2020   Prob (F-statistic):          3.23e-109\n",
-      "Time:                        22:11:31   Log-Likelihood:                -305.62\n",
-      "No. Observations:                 100   AIC:                             617.2\n",
-      "Df Residuals:                      97   BIC:                             625.1\n",
+      "Method:                 Least Squares   F-statistic:                     7757.\n",
+      "Date:                Wed, 23 Nov 2022   Prob (F-statistic):          9.51e-108\n",
+      "Time:                        13:33:43   Log-Likelihood:                -309.10\n",
+      "No. Observations:                 100   AIC:                             624.2\n",
+      "Df Residuals:                      97   BIC:                             632.0\n",
       "Df Model:                           2                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------\n",
-      "const          2.5115      1.535      1.636      0.105      -0.535       5.558\n",
-      "x1             3.9085      0.717      5.453      0.000       2.486       5.331\n",
-      "x2             1.9084      0.070     27.242      0.000       1.769       2.047\n",
+      "const          2.1226      1.590      1.335      0.185      -1.032       5.277\n",
+      "x1             3.7019      0.742      4.988      0.000       2.229       5.175\n",
+      "x2             1.9275      0.073     26.574      0.000       1.784       2.071\n",
       "==============================================================================\n",
-      "Omnibus:                        3.053   Durbin-Watson:                   1.981\n",
-      "Prob(Omnibus):                  0.217   Jarque-Bera (JB):                2.158\n",
-      "Skew:                          -0.180   Prob(JB):                        0.340\n",
-      "Kurtosis:                       2.377   Cond. No.                         142.\n",
+      "Omnibus:                        3.327   Durbin-Watson:                   2.105\n",
+      "Prob(Omnibus):                  0.190   Jarque-Bera (JB):                2.174\n",
+      "Skew:                           0.153   Prob(JB):                        0.337\n",
+      "Kurtosis:                       2.346   Cond. No.                         142.\n",
       "==============================================================================\n",
       "\n",
-      "Warnings:\n",
+      "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
      ]
     }
@@ -426,11 +435,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The fit parameters are: [2.51145164 3.90847451 1.90836754]\n",
+      "The fit parameters are: [2.12257376 3.7019039  1.92750664]\n",
       "The confidence intervals are:\n",
-      "[[-0.53548765  5.55839092]\n",
-      " [ 2.48602994  5.33091909]\n",
-      " [ 1.76933516  2.04739991]]\n"
+      "[[-1.03231177  5.27745928]\n",
+      " [ 2.22906529  5.1747425 ]\n",
+      " [ 1.78354866  2.07146463]]\n"
      ]
     }
    ],
@@ -444,7 +453,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -458,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
