--- a/ipynbs/2_WorkingWithNumbers.ipynb
+++ b/ipynbs/2_WorkingWithNumbers.ipynb
@@ -5,10 +5,11 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
-    "# Getting Things Done in Python\n",
+    "# Working with Numbers\n",
     "\n",
     "This notebook contains tips and tricks of working with vectors and matrices:\n",
     "* How to generate arrays of numbers\n",
@@ -16,7 +17,8 @@
     "* How to reotate vectors\n",
     "* And a first introduction into the often very valuable concept of \"broadcasting\"\n",
     "\n",
-    "author: Thomas Haslwanter, date: April-2020"
+    "author: Thomas Haslwanter;\n",
+    "date: Nov-2022"
    ]
   },
   {
@@ -24,7 +26,8 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "tags": []
    },
    "source": [
     "## Generating Data"
@@ -43,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -60,7 +63,7 @@
        "'%.3f'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,13 +73,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# To make the display prettier\n",
+    "# To make the display more compact\n",
     "%precision 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -93,15 +96,56 @@
        "array([1. , 1.5, 2. , 2.5, 3. , 3.5, 4. , 4.5])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Note that with \"arange\" the last value is NOT included!\n",
-    "x = np.arange(1,5,0.5)\n",
+    "x = np.arange(1, 5, 0.5)\n",
     "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# \"linspace\" produces a given number of linearly spaced numbers\n",
+    "y = np.linspace(0, 1, 11)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Generating Matrices"
    ]
   },
   {
@@ -120,7 +164,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])"
+       "array([0., 0., 0.])"
       ]
      },
      "execution_count": 4,
@@ -129,20 +173,9 @@
     }
    ],
    "source": [
-    "# \"linspace\" produces a given number of linearly spaced numbers\n",
-    "y = np.linspace(0,1,11)\n",
-    "y"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Generating Matrices"
+    "# Unlike MATLAB, Python by default generates vectors, NOT matrices!\n",
+    "zero_vector = np.zeros(3)\n",
+    "zero_vector"
    ]
   },
   {
@@ -161,7 +194,9 @@
     {
      "data": {
       "text/plain": [
-       "array([0., 0., 0.])"
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
       ]
      },
      "execution_count": 5,
@@ -170,9 +205,10 @@
     }
    ],
    "source": [
-    "# Unlike MATLAB, Python by default generates vectors, NOT matrices!\n",
-    "zero_vector = np.zeros(3)\n",
-    "zero_vector"
+    "# \"np.zeros\" and \"np.ones\" generate zeros and ones, respecitvely.\n",
+    "# They only take ONE input argument, which can be a number or a tuple:\n",
+    "zero_matrix = np.zeros( (3,3))\n",
+    "zero_matrix"
    ]
   },
   {
@@ -191,45 +227,12 @@
     {
      "data": {
       "text/plain": [
-       "array([[0., 0., 0.],\n",
-       "       [0., 0., 0.],\n",
-       "       [0., 0., 0.]])"
+       "array([[ 0.069,  0.594],\n",
+       "       [-0.888, -0.86 ],\n",
+       "       [ 0.06 ,  0.448]])"
       ]
      },
      "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# \"np.zeros\" and \"np.ones\" generate zeros and ones, respecitvely.\n",
-    "# They only take ONE input argument, which can be a number or a tuple:\n",
-    "zero_matrix = np.zeros( (3,3))\n",
-    "zero_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.922, -1.172],\n",
-       "       [ 1.545,  0.595],\n",
-       "       [-0.185,  2.031]])"
-      ]
-     },
-     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -295,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -312,20 +315,20 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# A row-vector can be generated like this ...\n",
-    "row_vector = np.array([1,2,3])\n",
+    "row_vector = np.array([1, 2, 3])\n",
     "row_vector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -342,7 +345,7 @@
        "array([3, 4, 5], dtype=int32)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -374,7 +377,7 @@
        "       [6]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,6 +386,37 @@
     "# I know the syntax for generating column-vectors are all a bit weird :(\n",
     "col_vector = np.c_[[4,5,6]]\n",
     "col_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [2],\n",
+       "       [3]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This one uses the command \"np.newaxis\" to generate a column vector ....\n",
+    "row_vector[..., np.newaxis]"
    ]
   },
   {
@@ -412,22 +446,62 @@
     }
    ],
    "source": [
-    "# This one uses the command \"np.newaxis\" to generate a column vector ....\n",
-    "row_vector[..., np.newaxis]"
+    "# ... and here is how to use the \"reshape\" command: the \"-1\" means \"however many there are\":\n",
+    "np.reshape(row_vector, (-1,1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ATTENTION: Vectors cannot be transposed!!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "slideshow": {
-     "slide_type": "fragment"
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
+   ],
+   "source": [
+    "row_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ... is the same as\n",
+    "row_vector.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -437,14 +511,15 @@
        "       [3]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# ... and here is how to use the \"reshape\" command: the \"-1\" means \"however many there are\":\n",
-    "np.reshape(row_vector, (-1,1))"
+    "# If you want to transpose a vector, it has to be 2-dimensional!\n",
+    "vector_2d = np.atleast_2d(row_vector)\n",
+    "vector_2d.T"
    ]
   },
   {
@@ -471,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -490,16 +565,6 @@
       " [ 0.5    0.866]]\n",
       "I rotated [1 0] into [0.866 0.5  ]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -508,15 +573,35 @@
     "rot_mat = np.array([[np.cos(alpha), -np.sin(alpha)],\n",
     "                    [np.sin(alpha), np.cos(alpha)]])\n",
     "\n",
-    "# Note that there are two ways to specify a matrix multiplication\n",
+    "# The most elegant way to specify a matrix multiplication is with \"@\"\n",
     "vec = np.r_[1,0]\n",
-    "vec_rotated = rot_mat.dot(vec)\n",
-    "vec_rotated_2 = rot_mat @ vec # for Python >3.5\n",
+    "vec_rotated = rot_mat @ vec\n",
     "\n",
     "# Show the results\n",
     "print(rot_mat)\n",
-    "print('I rotated {0} into {1}'.format(str(vec), str(vec_rotated)))\n",
-    "np.all(vec_rotated == vec_rotated_2)"
+    "print('I rotated {0} into {1}'.format(str(vec), str(vec_rotated)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rotation of a list of vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lists of vectors, e.g. a sequence of 3D positions, are typically stored as a column-shaped matrix\n",
+    "positions = np.random.randn(10, 2)\n",
+    "\n",
+    "# To rotate them, you have to take care that the \"positions\" match the rotation matrix:\n",
+    "#    they have to be transposed\n",
+    "# And to bring the data back into column shape, you have to transpose them back\n",
+    "rotated = (rot_mat @ positions.T).T"
    ]
   },
   {
@@ -535,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -556,7 +641,7 @@
        "       [12, 13, 14]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -586,7 +671,7 @@
        "7.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -615,7 +700,7 @@
        "array([6., 7., 8.])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -648,7 +733,7 @@
        "       [ 6.,  6.,  6.]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -682,14 +767,10 @@
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (5,3) (5,) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-19-a450a07cff33>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# with the vector length!\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# So the following command will lead to an Error:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (5,3) (5,) "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR: The shape of the operands did not match!\n"
      ]
     }
    ],
@@ -697,8 +778,13 @@
     "# This only works on the last index of \"data\";\n",
     "# since the broadcast-rules require that this index matches \n",
     "# with the vector length! \n",
-    "# So the following command will lead to an Error:\n",
-    "data - np.mean(data, axis=1)"
+    "# WARNING: So the following command will lead to an Error!\n",
+    "\n",
+    "# In Python, errors can be caught with \"try - except\":\n",
+    "try:\n",
+    "    data - np.mean(data, axis=1)\n",
+    "except ValueError:\n",
+    "    print('ERROR: The shape of the operands did not match!')"
    ]
   },
   {
@@ -706,15 +792,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data.shape"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -728,7 +812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.10"
   },
   "toc": {
    "base_numbering": 1,
